--- a/doc/gis.tex
+++ b/doc/gis.tex
@@ -230,7 +230,7 @@ Podczas analizy zbadane zostały dwa przypadki:
 
 \subsection{Analiza poprawności działania algorytmu}
 Przed przystąpieniem do właściwej analizy działania algorytmu została zweryfikowana poprawność jego implementacji. Do testowania poprawności działania programu wykorzystana została biblioteka igraph. Szczegółowy schemat testowania został przedstawiony w rozdziale \ref{igraph-testy}.
-Testy zostały przeprowadzone na ograniczonym do zakresu wierzchołków 10 -- 50 zestawie grafów opisanych na początku niniejszego rozdziału i nie wykazały błędów ani problemów z działaniem algorytmu.
+Testy zostały przeprowadzone na zestawie grafów opisanych na początku niniejszego rozdziału i nie wykazały błędów ani problemów z działaniem algorytmu.
 \subsection{Analiza czasów wykonania algorytmu}
 Dla każdego zestawu grafów dokonane zostały pomiary czasu działania algorytmu. Wyniki zostały zamieszczone poniżej.
 \newpage
@@ -473,8 +473,8 @@ Dla każdego zestawu grafów dokonane zostały pomiary czasu działania algorytm
     60 & 67 & 11.49 \\ \hline
     70 & 127 & 102.40 \\ \hline
     80 & 106 & 437.49 \\ \hline
-    90 & * & * \\ \hline
-    100 & * & * \\ \hline
+    90 & 204 & 3486.84 \\ \hline
+    100 & 111 & 9667.70 \\ \hline
     \end{tabular}
 \end{center}
 \end{table}
