Drobne poprawki w dokumentacji

--- a/doc/gis.tex
+++ b/doc/gis.tex
@@ -631,14 +631,14 @@ i gęstości 0,9 sięgający prawie 3 godzin).
 Opis zawartości poszczególnych katalogów:
 
 \begin{itemize}
- \item java-workspace - implementacja algorytmu będącego przedmiotem projektu,
- \item gis-c - pomocniczy program generujący rozwiązania referencyjne z wykorzystaniem biblioteki igraph,
- \item tests - pliki dla testów weryfikujących poprawność implementacji:
+ \item \texttt{java-workspace} - implementacja algorytmu będącego przedmiotem projektu,
+ \item \texttt{gis-c} - pomocniczy program generujący rozwiązania referencyjne z wykorzystaniem biblioteki igraph,
+ \item \texttt{tests} - pliki dla testów weryfikujących poprawność implementacji:
  	\begin{itemize}
- 		\item correctness - pliki z grafami wykorzystanymi do weryfikacji poprawności algorytmu,
- 		\item performance - pliki z grafami wykorzystanymi podczas analizy czasów wykonania algorytmu i jego poprawności,
+ 		\item \texttt{correctness} - pliki z grafami wykorzystanymi do weryfikacji poprawności algorytmu,
+ 		\item \texttt{performance} - pliki z grafami wykorzystanymi podczas analizy czasów wykonania algorytmu i jego poprawności,
  	\end{itemize}
- \item doc - dokumentacja projektu.
+ \item \texttt{doc} - dokumentacja projektu.
 \end{itemize}
 
 \section{Instrukcja obsługi}
@@ -649,7 +649,7 @@ Aplikacja działa w trybie konsolowym. W celu jej uruchomienia należy wykonać 
  \item Przygotować pliki wejściowe.
  \item Uruchomić program jednym z możliwych sposobów:
  \begin{itemize}
- 	\item Ręczne uruchomienie. Należy wykonać następujące polecenie: \\
+ 	\item Ręczne uruchomienie. W katalogu \texttt{java-workspace} należy wykonać następujące polecenie: \\
  	\texttt{java -cp bin main/Main < plik\_wejściowy}
  	\item Uruchomienie z wykorzystaniem skryptu.
  	Wraz z programem dostarczone są dwa skrypty ułatwiające uruchamianie i testowanie aplikacji:
